# soxs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  COPYING.txt  MANIFEST.in  README.md  clean.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: backfill-wheels.yaml  build-test.yml  publish_conda.yml  wheels.yaml
conda/: meta.yaml
dev/: acis-i-part-bg.xcm  aciss_stowed_model.xcm  make_cx_table.py  make_flat_part_bkg.py  make_part_bkg_acisi.py  make_part_bkg_aciss.py  make_part_bkg_hdxi.py  make_part_bkg_lxm.py
doc/: Makefile  install_script.sh
doc/source/: changelog.rst  conf.py  configuration.rst  external_packages.rst  getting_help.rst  index.rst  installing.rst  overview.rst  responses.rst  tools.rst
doc/source/api/: background.rst  charge_exchange.rst  events.rst  index.rst  instrument.rst  modules.rst  mosaic.rst  response.rst  simput.rst  source_catalogs.rst  spatial.rst  spectra.rst  thermal_spectra.rst  utils.rst
doc/source/command_line/: add_background.rst  add_backgrounds.rst  background.rst  cosmology.rst  events.rst  general_info.rst  index.rst  instrument.rst  make_event_file.rst  random_numbers.rst  source_catalogs.rst  sources.rst  spatial.rst  spectra.rst
doc/source/cookbook/: Cosmo_Source_Catalog.ipynb  Make_Background_File.ipynb  Point_Source_Catalog.ipynb  Radial_Profile.ipynb  Two_Clusters.ipynb  change_dither.rst  change_instrument_spec.rst  cosmo_source_catalog.rst  cosmo_source_catalog_cmd.rst  index.rst  make_background_file.rst  make_background_file_cmd.rst  make_multiple_sources.rst  point_source_catalog.rst  point_source_catalog_cmd.rst  pyXSIM_Example.ipynb  pyxsim_example.rst  radial_profile.rst  two_clusters.rst
doc/source/examples/: change_instrument_spec.rst  index.rst  make_multiple_sources.rst
doc/source/files/: change_dither.sh  change_instrument_spec.sh  cosmo_source_catalog.sh  example_lxm_spec.json  example_mucal_spec.json  example_xcal_spec.json  hdxi_2.json  hdxi_5.json  make_background_file.sh  make_multiple_sources.sh  make_sloshing.py  point_source_catalog.sh
doc/source/python/: background.rst  event_tools.rst  events.rst  index.rst  instrument.rst  simput.rst  spatial.rst  spectra.rst
doc/source/users_guide/: background.rst  charge_exchange.rst  event_tools.rst  general_info.rst  index.rst  instrument.rst  mosaic.rst  (+6 more)
scripts/: get_instrument_data  instrument_simulator  make_annulus_source  make_astrophysical_background  make_background  make_background_file  make_beta_model  make_beta_model_source  make_cie_spectrum  make_cosmo_background  make_cosmological_sources  make_double_beta_model  make_double_beta_model_source  make_event_file  make_exposure_map  make_fov_source  make_igm_spectrum  make_image  make_phlist_from_ascii  make_pion_spectrum  make_point_source  make_point_source_list  make_point_sources  make_powerlaw_spectrum  make_ptsrc_background  make_radial_profile  make_rectangle_source  make_thermal_spectrum  simulate_events  simulate_spectrum
sox/: __init__.py  events.py  instrument.py  simput.py  spatial.py  spectra.py  utils.py
soxs/: __init__.py  _version.py  apec.py  background.py  cie.py  constants.py  cosmology.py  data.py  events.py  file_hash_registry.json  grid.py  igm.py  instrument.py  instrument_registry.py  mosaic.py  pion.py  psf.py  response.py  simput.py  spatial.py  spectra.py  thermal_spectra.py  utils.py
soxs/background/: __init__.py  cosmological.py  diffuse.py  events.py  foreground.py  gratings.py  instrument.py  point_sources.py  spectra.py  utils.py
soxs/events/: __init__.py  images.py  spectra.py  tools.py  utils.py
soxs/files/: acisi_aimpt_cy0.arf  acisi_aimpt_cy0.rmf  acisi_aimpt_cy19.arf  acisi_aimpt_cy19.rmf  acisi_particle_bkgnd.h5  aciss_particle_bkgnd.h5  athena_xifu_1469_onaxis_pitch249um_v20160401.arf  axis_leo_bkgnd.h5  halo_catalog.h5  hitomi_sxs_bkgnd.h5  hm_cxb_bkgnd.h5  lum_table.h5  mucal_particle_bkgnd.h5  tbabs_table.h5  wfi_bkgnd.h5  xifu_bkgnd.h5  xrs_hdxi_3x10.arf  xrs_hdxi_3x15.arf  xrs_hdxi_3x20.arf  xrs_hdxi_6x20.arf  xrs_mucal.rmf  xrs_mucal_3x10.arf  xrs_mucal_3x15.arf  xrs_mucal_3x20.arf  xrs_mucal_6x20.arf
soxs/instrument/: __init__.py  instrument_simulation.py  response.py
soxs/lib/: broaden_lines.pyx  psf_cdf.pyx  spectral_cube.pyx
soxs/spectra/: __init__.py  base.py  charge_exchange.py  foreground_absorption.py  thermal_spectra.py
soxs/tests/: conftest.py  coveragerc  test_bkgnd.py  test_cx.py  test_filter.py  test_lines.py  test_power_law.py  test_pyspex.py  test_pyxsim_read.py  test_registry.py  test_simput.py  test_simulate_spectrum.py  test_spatial.py  test_spectra.py  test_spex.py  test_thermal.py  test_xstar.py  utils.py
tests/: ci_install.sh  run_tests.sh
xrs_tools/: __init__.py  constants.py  events.py  instrument.py  simput.py  simx.py  spatial.py  spectra.py  utils.py
xrs_utils/: __init__.py  constants.py  simput.py  spectra.py
