[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    # see https://github.com/numpy/numpy/pull/18389
    "wheel>=0.36.2",

    # Cython 3.0 is the next version after 0.29, and a major change,
    # we forbid it until we can properly test against it
    "Cython>=0.29.21,<3.1",
    "oldest-supported-numpy",
]

[project]
name = "soxs"
dynamic = ["version"]
requires-python = ">=3.9.2"
description = "Simulated Observations of X-ray Sources"
authors = [
    { name = "John ZuHone", email = "jzuhone@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "astropy>=4.0",
    "tqdm",
    "pooch",
    "h5py>=3.0",
    "scipy",
    "pyyaml",
    "regions",
    "appdirs",
]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']
include = '''
/(
    \.pyi?$
  | scripts/*
)/
'''
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]
known_third_party = [
  "IPython",
  "numpy",
  "sympy",
  "matplotlib",
  "unyt",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "astropy",
  "scipy",
  "pathlib",
  "yt",
  "pyxsim"
]
known_first_party = ["soxs"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
