[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7.0.1",
    # see https://github.com/numpy/numpy/pull/18389
    "wheel>=0.36.2",
    "Cython>=0.29.21",
    "numpy>=2.0.0,<3",
]

[project]
name = "soxs"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Simulated Observations of X-ray Sources"
authors = [
    { name = "John ZuHone", email = "jzuhone@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "astropy>=4.0",
    "tqdm",
    "pooch",
    "h5py>=3.0",
    "scipy",
    "pyyaml",
    "regions",
    "appdirs",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 110
exclude = [
    "doc",
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "G",    # flake8-logging-format
    "TCH",  # flake8-type-checking
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "I",    # isort
    "NPY",  # numpy specific rules
    "RUF031"# incorrectly-parenthesized-tuple-in-subscript
]
ignore = [
    "E741",  # Do not use variables named 'I', 'O', or 'l'
]

[tool.ruff.lint.per-file-ignores]
"test_*" = ["NPY002"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = [
  "IPython",
  "numpy",
  "sympy",
  "matplotlib",
  "unyt",
  "git",
  "yaml",
  "dateutil",
  "requests",
  "coverage",
  "pytest",
  "astropy",
  "scipy",
  "pathlib",
  "yt",
  "pyxsim"
]
known-first-party = ["soxs"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
